*** 20011204_3 by db
- don't show hidden | comments in active kill *duh*



*** 20011204_2 by androsyn
Added some of the standard adns/ documents into the tree, just to give
credit to the original author of adns who wrote such a nice resolver
library.



*** 20011204_1 by androsyn
Fixed depend wackiness 


*** 20011203_7 by androsyn
that should be adns.c not adns.o


*** 20011203_6 by androsyn
Fix some macro clashes


*** 20011203_5 by androsyn
changed my location in this..the adns/ crap is a pretty big change :P


*** 20011203_4 by androsyn
These are the changes to kill res.c dead.



*** 20011203_3 by androsyn
Added all the goodies for adns/



*** 20011203_2 by androsyn
Directory /cvsroot/ircd-hybrid-6/adns added to the repository


*** 20011203_1 by wcampbel
Correction in the documentation of KLINE_WITH_CONNECTION_CLOSED,
thanks Kindred.


*** 20011201_1 by leeh
- $irc.server -> $$irc.server
- #host.mask -> $#host.mask


*** 20011130_1 by db
- remove BOTCHECK.
  It is obsolete in todays efnet world. Its functionality is replaced
  by X lines anyway.



*** 20011129_16 by wcampbel
Corrected the application of the TKLINE expire patch, apparently diff
created two sections that looked identical.


*** 20011129_15 by db
- committed hwy's tkline expire patch



*** 20011129_14 by wcampbel
RESTART now requires the server name (like die)
A few small doc changes


*** 20011129_13 by wcampbel
Updated dependencies


*** 20011129_12 by androsyn
Added mmap() goodness to blalloc.c


*** 20011129_11 by wcampbel
Update opers.txt documentation again.


*** 20011129_10 by db
Lee is right. /stats j should be /stats q like hybrid-7. done deal.
Also removed the unnecessary (char *) cast on the NULLs in the message tables



*** 20011129_9 by db
- Adds /stats F /stats J
  added proper RPL_STATSJLINE in numerics.h and in messages.tab
  messages_cust.tab



*** 20011129_8 by wcampbel
Revise docs for the latest flurry of commits.  I still need more testing