@@ -1,3 +1,7 @@
+*** 20011204_4 by androsyn
+It be nice if I committed adns.c into the tree
+
+
 *** 20011204_3 by db
 - don't show hidden | comments in active kill *duh*
 
